dropdown alignment fix

--- a/client/src/containers/Messages/Message.css
+++ b/client/src/containers/Messages/Message.css
@@ -11,7 +11,6 @@
 background: var(--white);
 }
 .message-tester:nth-of-type(even) .ind-message:hover{
-/* background-image: radial-gradient(circle closest-corner, var(--light-gray), var(--gray)); */
 background: var(--light-gray);
 }
 .color-message-border{
@@ -56,7 +55,7 @@ background: var(--light-gray);
 .dropdown{
   position:relative;
   grid-row: 2/3;
-  grid-column: 4/6;
+  grid-column: 5/6;
   justify-self: flex-end;
   width: 100%;
   display: flex;
